stream settings: Correct alignment of filter streams div.
The div containing options for filtering streams was placed in the
centre. Aligned it towards the right. Had to pass a special check
variable in subs.js:540 to add the specific class for this purpose.
This was a specific scenario where this sort of CSS was to be added,
hence had to make a specific case.

Also, fixed the bottom border color of the search streams bar for night
mode.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -34,6 +34,7 @@ body.night-mode {
 
     .column-left .left-sidebar,
     #settings_page .form-sidebar,
+    .stream_name_search_section,
     .column-right .right-sidebar {
         border-color: hsla(0, 0%, 0%, 0.2);
     }
